--- a/scss/main.css
+++ b/scss/main.css
@@ -1,1 +1,87 @@
-/* No CSS *//*# sourceMappingURL=main.css.map */
+@import url("https://fonts.googleapis.com/css2?family=Spartan:wght@400;500;700&display=swap");
+*,
+*::before,
+*::after {
+  margin: 0;
+  padding: 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+html {
+  font-size: 100%;
+}
+
+body {
+  font-family: "Spartan", sans-serif;
+  padding: 8rem 10.3125rem 6.25rem 10.3125rem;
+}
+
+.flex {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.header {
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin-bottom: 5rem;
+}
+
+.header__text {
+  max-width: 29rem;
+}
+
+.header__heading {
+  font-size: 3.25rem;
+  color: #502050;
+  margin-bottom: 0.9375rem;
+}
+
+.header__sub {
+  font-size: 0.9375rem;
+  line-height: 1.8;
+  color: #937b92;
+  font-weight: 500;
+}
+
+.header__ratings {
+  min-width: 33.75rem;
+}
+
+.header__box {
+  background-color: #f7f2f7;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 1.25rem 2rem;
+  border-radius: 10px;
+  max-width: 27.8125rem;
+  margin-top: 1rem;
+}
+
+.header__box:not(:last-child) {
+  margin-bottom: 1rem;
+}
+
+.header__box--1 {
+  margin-right: auto;
+}
+
+.header__box--2 {
+  margin: 0 auto;
+}
+
+.header__box--3 {
+  margin-left: auto;
+}
+
+.header__review {
+  font-size: 0.75rem;
+  color: #502050;
+  font-weight: 700;
+  padding-left: 2rem;
+}
+/*# sourceMappingURL=main.css.map */
